--- a/Assets/TodoApp/Tests/EditorTests/EditorTests.asmdef
+++ b/Assets/TodoApp/Tests/EditorTests/EditorTests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "domain"
+        "domain",
+        "usecase"
     ],
     "includePlatforms": [
         "Editor"
@@ -13,7 +14,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "LiteDB.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
