--- a/Assets/TodoApp/Domain/domain.asmdef
+++ b/Assets/TodoApp/Domain/domain.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "domain"
+    "name": "domain",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
